--- a/aaa.html
+++ b/aaa.html
@@ -43,7 +43,7 @@ marker: {
 size: 2,
         showscale: true,
         color: c,
-        colorscale: 'Viridis'
+        colorscale: 'heatmap'
     },
  line: {
    width: 0,
